--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "extract-i18n": "node scripts/extract-i18n.js",
+    "check-i18n": "node scripts/check-i18n.js"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.8.0",
@@ -35,6 +37,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.552.0",
     "next": "15.5.6",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -52,6 +55,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "glob": "^11.0.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
