--- a/package.json
+++ b/package.json
@@ -40,12 +40,37 @@
     "@supabase/supabase-js": "^2.79.0",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/core": "^3.10.7",
+    "@tiptap/extension-blockquote": "^3.10.7",
+    "@tiptap/extension-bold": "^3.10.7",
+    "@tiptap/extension-bullet-list": "^3.10.7",
+    "@tiptap/extension-code": "^3.10.7",
+    "@tiptap/extension-code-block": "^3.10.7",
+    "@tiptap/extension-document": "^3.10.7",
+    "@tiptap/extension-dropcursor": "^3.10.7",
+    "@tiptap/extension-gapcursor": "^3.10.7",
+    "@tiptap/extension-hard-break": "^3.10.7",
+    "@tiptap/extension-heading": "^3.10.7",
+    "@tiptap/extension-history": "^3.10.7",
+    "@tiptap/extension-horizontal-rule": "^3.10.7",
+    "@tiptap/extension-image": "^3.10.7",
+    "@tiptap/extension-italic": "^3.10.7",
+    "@tiptap/extension-list-item": "^3.10.7",
+    "@tiptap/extension-ordered-list": "^3.10.7",
+    "@tiptap/extension-paragraph": "^3.10.7",
+    "@tiptap/extension-strike": "^3.10.7",
+    "@tiptap/extension-text": "^3.10.7",
+    "@tiptap/extension-underline": "^3.10.7",
+    "@tiptap/pm": "^3.10.7",
+    "@tiptap/react": "^3.10.7",
+    "@tiptap/starter-kit": "^3.10.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "next": "15.5.6",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
